--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,6 @@ spring.jpa.hibernate.ddl-auto=update
 
 # spring.devtools.livereload.enabled=true
 
+# Disable session creation
+server.servlet.session.timeout=0
+
