--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,11 +5,26 @@ spring.datasource.url=jdbc:mysql://localhost:3306/plustalk?userUnicode=true&char
 spring.datasource.username=plustalk
 spring.datasource.password=12345678
 
-spring.jpa.properties.hibernate.show_sql=true
-spring.jpa.properties.hibernate.format_sql=true
-logging.level.org.hibernate.type.descriptor.sql=trace
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
+
+# SQL ?? ?? ????
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.format_sql=false
+#spring.jpa.properties.hibernate.show_sql=true
+#spring.jpa.properties.hibernate.format_sql=true
+
+# Hibernate ??? ERROR ???? ??
+logging.level.org.hibernate=ERROR
+logging.level.org.hibernate.SQL=ERROR
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=ERROR
+#logging.level.org.hibernate.type.descriptor.sql=trace
+
+# SQL ??? ?? ??? ??
+logging.level.org.hibernate.engine.jdbc.spi.SqlExceptionHelper=ERROR
+
+# ???? ???? ???? ?? ??
+#spring.jpa.open-in-view=false
 
 # spring.devtools.livereload.enabled=true
 
