--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,7 +15,7 @@ spring.jpa.properties.hibernate.format_sql=false
 #spring.jpa.properties.hibernate.format_sql=true
 
 # Hibernate ??? ERROR ???? ??
-logging.level.org.hibernate=ERROR
+#logging.level.org.hibernate=ERROR
 logging.level.org.hibernate.SQL=ERROR
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=ERROR
 #logging.level.org.hibernate.type.descriptor.sql=trace
