Profile Image API Update

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=PlusTalk
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://plustalk-mysql.c3kkwi4yut0m.ap-northeast-2.rds.amazonaws.com:3306/plustalk?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Seoul
-#spring.datasource.url=jdbc:mysql://localhost:3306/plustalk?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Seoul
+#spring.datasource.url=jdbc:mysql://plustalk-mysql.c3kkwi4yut0m.ap-northeast-2.rds.amazonaws.com:3306/plustalk?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Seoul
+spring.datasource.url=jdbc:mysql://localhost:3306/plustalk?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Seoul
 spring.datasource.username=plustalk
 spring.datasource.password=12345678
 
